--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,78 @@
-main {
-    background-color: chartreuse; 
-    padding: 4px;
+*{
+    margin: 0;
 }
-h1,h2 {
-    color: blue;
+
+body{
+    height: 100%;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+background-color: burlywood;
+display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+h1{
+    color:blue;
+    background-color: cornsilk;
+    width: 25%;
+    text-align: center;
+    border: solid 1px black;
+    margin-bottom: 25px;
+    margin-top: 0px;
+
+}
+aside{
+    text-align: center;
+    height: 50em;
+}
+p{
+    margin-top: -350px;
+    margin-bottom: 0px;
+    margin-left: 100px;
+    margin-right: 100px; 
+    
+}
+header{
+    width: 90%;
+}
+
+
+#z_logo {
+    height: 50%;
+    width: 50%;
+}
+footer{
+    
+    margin-top: -300px;
+}
+
+
+ul{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+}
+li{
+    
+    list-style-type: none;
+    padding:50px 12.5%;
+}
+li:nth-child(even){
+    background-color: lightblue;
+    
+}
+li:nth-child(odd){
+    background-color: lightcoral;
+}
+a{
+    text-decoration:none;
+}
+@media only screen and (min-width: 768px){
+    main{
+        display: flex;
+    }
 }
