--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,26 @@ html,body{
     padding: 0;
 }
 
-p{
-    color: green;
+.top{
+    color: darkblue;
     text-align:center;
+    padding: 15px;
+    background-color: silver;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.aside {
+  background-color: darkgreen;
+  padding: 15px;
+  color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+
 img{
-width: 10%;
+width: 15%;
 border-radius: 50%;
 
 }
@@ -17,25 +30,28 @@ header{
     background-color: darkgreen;
     
 }
+/* #bird {
+  animation: 0.5s ease-in-out 0s infinite alternate soaringbird;
+  width: 50px;
+}
+#bird:hover{
+  padding-top:8px;
+}
 
+@keyframes soaringbird{
+  from {
+    padding-top: 0px;
+  }
+  to{
+    padding-top: 12px;
+  }
+} */
 
 body, html {
     height: 100%;
   }
   
-  .parallax {
-    /* The image used */
-    background-image: url("logo_v2.jpg");
   
-    /* Full height */
-    height: 100%;
-  
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
 
 /* Add a black background color to the top navigation */
 .topnav {
@@ -148,3 +164,9 @@ body, html {
     }
   }
   
+  @media (min-width: 1500px){
+    .aside{
+      display: flex;
+      flex-direction: row;
+    }
+  }
